# rat-hindlimb-model

./: .gitignore  Makefile  README.md  flake.nix  index.qmd  pyproject.toml
data/parameters/: tsl_comparison.csv
docs/: dynamics_simulation_strategy.md  scaling_strategy.md
models/osim/: rat_hindlimb_bilateral.osim  rat_hindlimb_bilateral_no_muscles.osim  rat_hindlimb_unilateral.osim  rat_hindlimb_unilateral_no_muscles.osim
models/osim/xml/: rat_hindlimb_bilateral_actuators.xml  rat_hindlimb_bilateral_cmc_constraints.xml  rat_hindlimb_bilateral_rra_actuators.xml  rat_hindlimb_bilateral_rra_constraints.xml  rat_hindlimb_bilateral_scale_setup.xml  rat_hindlimb_bilateral_tasks.xml
notebooks/: muscle_lengths.qmd  tsl_optimization.ipynb  tsl_optimization.py
notebooks/pipeline/: 01_non_muscle_edits.ipynb  01_non_muscle_edits.py  01_non_muscle_edits.qmd  02_muscle_edits.ipynb  02_muscle_edits.py  02_muscle_edits.qmd  03_mirroring.ipynb  03_mirroring.py  03_mirroring.qmd
utilities/: __init__.py  dynamics.py  moco.py  project.py  scale.py  tsl.py
utilities/analysis/: __init__.py  defaults.py  io.py  pipeline.py  plots.py  queries.py
