[project]
name = "rathindlimb"
version = "0.1.0"
description = "Rat hindlimb musculoskeletal model utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opensim>=4.6",
    "open3d",
    "osimpy",
    "tsl-optimization",
]

[project.optional-dependencies]
dev = [
    "ezc3d",
    "marimo",
    "polars",
    "pytest>=8",
]

[tool.uv.sources]
osimpy = { git = "https://github.com/hudsonburke/osimpy.git" }
tsl-optimization = { git = "https://github.com/hudsonburke/tsl-optimization.git" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rathindlimb"]

[tool.setuptools.package-dir]
rathindlimb = "utilities"

[tool.pytest.ini_options]
pythonpath = ["utilities"]
testpaths = ["tests"]
